# cppserver

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  _concurrency_test.sh  concurrency_test.sh  h1_plot.py  h2_ext  h2_measure.py  h2_plot.py  h3_measure.py  h3_plot.py  h4_measure.py  h4_plot.py  measure.py  new_concurrency_test.sh  plot_wrk.py  rebuild.sh
report/: main.tex
results_2026-05-03_10-37-24/: metadata.json  wrk_results.csv
results_h2_2026-05-03_21-58-50/: metadata.json  wrk_results.csv
results_h3_2026-05-06_11-57-05/: metadata.json  wrk_results.csv
results_h4_2026-05-09_17-40-46/: metadata.json  wrk_results.csv
src/: CMakeLists.txt  client.h  cpu_worker.cpp  cpu_worker.h  io_worker.cpp  io_worker.h  main.cpp  thread_pool.cpp  thread_pool.h  worker.cpp  worker.h  worker_base.h
